// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="md shape-round btn sc-kpOJdX jyYVAP"
    size="md"
  >
    <div />
  </button>
</span>
`;

exports[`When using snapshots Should render with the inactive prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="md shape-round sc-dxgOiQ fCtUDG"
    size="md"
  >
    <div />
  </button>
</span>
`;

exports[`When using snapshots Should render with the loading prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="loading md shape-round btn sc-kpOJdX jyYVAP"
    size="md"
  >
    <div
      className="centered sc-bxivhb gIwMIC"
    >
      <div>
        <div
          className="sc-htpNat eBWglT"
        />
        
      </div>
    </div>
  </button>
</span>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="md shape-square btn sc-kpOJdX jyYVAP"
    size="md"
  >
    <div />
  </button>
</span>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="xs shape-round btn sc-kpOJdX hHVDyi"
    size="xs"
  >
    <div />
  </button>
</span>
`;

exports[`When using snapshots Should render with the type prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="md shape-round btn sc-ckVGcZ dHkywV"
    size="md"
  >
    <div />
  </button>
</span>
`;
